# HttpProxy

./: CMakeLists.txt  README.md  pom.xml
cpp-version/: CMakeLists.txt  config.h.in  main.cpp
cpp-version/include/: socket_raii.h  util.h
cpp-version/src/: main.cpp
include/: remote_socket.h  socket_raii.h  url.h
src/: main.cpp  remote_socket.cpp  socket_raii.cpp  url.cpp
src/main/java/httpproxy/: App.java
src/test/java/httpproxy/: AppTest.java
